--- a/breaking_bad.html
+++ b/breaking_bad.html
@@ -154,47 +154,84 @@
         <header class="title__comments__other-comments"><h2>Other comments</h2></header>
         <div class="title__comments">
             <div class="title__comments__comment">
-                <header>
-                    MethMaster01
-                    <span>10 / 10</span>
+                <header class="title__comments__comment__header">
+                    <h3>MethMaster01</h3>
+                    <span class="title__comments__comment__header__rating">
+                        <img src="icons/star-filled.png">
+                        <img src="icons/star-filled.png">
+                        <img src="icons/star-filled.png">
+                        <img src="icons/star-filled.png">
+                        <img src="icons/star-filled.png">
+                    </span>
                 </header>
                 <p>An absolute masterpiece! The character development and storytelling are unparalleled. Bryan Cranston delivers one of the best performances in TV history.</p>
             </div>
             <div class="title__comments__comment">
-                <header>
-                    ChemistryFan
-                    <span>9 / 10</span>
+                <header class="title__comments__comment__header">
+                    <h3>ChemistryFan</h3>
+                    <span class="title__comments__comment__header__rating">
+                        <img src="icons/star-filled.png">
+                        <img src="icons/star-filled.png">
+                        <img src="icons/star-filled.png">
+                        <img src="icons/star-filled.png">
+                        <img src="icons/star.png">
+                    </span>
                 </header>
                 <p>The transformation of Walter White from a struggling teacher to a criminal mastermind is both terrifying and fascinating. A must-watch!</p>
             </div>
             <div class="title__comments__comment">
-                <header>
-                    JessePinkmanFan
-                    <span>8 / 10</span>
+                <header class="title__comments__comment__header">
+                    <h3>JessePinkmanFan</h3>
+                    <span class="title__comments__comment__header__rating">
+                        <img src="icons/star-filled.png">
+                        <img src="icons/star-filled.png">
+                        <img src="icons/star-filled.png">
+                        <img src="icons/star-filled.png">
+                        <img src="icons/star.png">
+                    </span>
                 </header>
                 <p>"Yo, Mr. White!" Jesse's journey is so emotional. He steals the show in many scenes. The series has a few slow episodes, but overall it's amazing.</p>
             </div>
             <div class="title__comments__comment">
-                <header>
-                    TVAddict99
-                    <span>10 / 10</span>
+                <header class="title__comments__comment__header">
+                    <h3>TVAddict99</h3>
+                    <span class="title__comments__comment__header__rating">
+                        <img src="icons/star-filled.png">
+                        <img src="icons/star-filled.png">
+                        <img src="icons/star-filled.png">
+                        <img src="icons/star-filled.png">
+                        <img src="icons/star-filled.png">
+                    </span>
                 </header>
                 <p>Breaking Bad sets the gold standard for TV dramas. Every season gets better, and the finale is perfection.</p>
             </div>
             <div class="title__comments__comment">
-                <header>
-                    BetterCallMe
-                    <span>9 / 10</span>
+                <header class="title__comments__comment__header">
+                    <h3>BetterCallMe</h3>
+                    <span class="title__comments__comment__header__rating">
+                        <img src="icons/star-filled.png">
+                        <img src="icons/star-filled.png">
+                        <img src="icons/star-filled.png">
+                        <img src="icons/star-filled.png">
+                        <img src="icons/star.png">
+                    </span>
                 </header>
                 <p>Saul Goodman is the best! His witty lines and charm add a lot to the series. I also loved the moral dilemmas Walter faces.</p>
             </div>
             <div class="title__comments__comment">
-                <header>
-                    DarkDramaLover
-                    <span>7 / 10</span>
+                <header class="title__comments__comment__header">
+                    <h3>DarkDramaLover</h3>
+                    <span class="title__comments__comment__header__rating">
+                        <img src="icons/star-filled.png">
+                        <img src="icons/star-filled.png">
+                        <img src="icons/star-filled.png">
+                        <img src="icons/star.png">
+                        <img src="icons/star.png">
+                    </span>
                 </header>
                 <p>The show is great, but it can be very intense at times. Not for everyone, but if you love deep, complex stories, this is for you.</p>
             </div>
+            
         </div>
     </main>
 </body>
