--- a/alan_wake.html
+++ b/alan_wake.html
@@ -41,10 +41,10 @@
                 <button onclick="openHowlongtobeat()">How long to beat</button>
             </div>
             <div class="title__description__info">
-                <span id="title__description--bold">Release date:</span> May 14, 2010<br>
-                <span id="title__description--bold">Developer:</span> Remedy Entertainment<br>
-                <span id="title__description--bold">Publisher:</span> Microsoft Game Studios<br>
-                <span id="title__description--bold">Genre:</span> Action-adventure, Psychological thriller<br><br>
+                <span id="title__description--bold">Release date</span> May 14, 2010<br>
+                <span id="title__description--bold">Developer</span> Remedy Entertainment<br>
+                <span id="title__description--bold">Publisher</span> Microsoft Game Studios<br>
+                <span id="title__description--bold">Genre</span> Action-adventure, Psychological thriller<br><br>
             </div>
 
             <p class="title__description__about">Dive into the haunting world of Alan Wake, a psychological thriller where a writer’s words come to life, blurring the lines between reality and fiction. Set in the small town of Bright Falls, the game unravels a gripping narrative filled with suspense, mystery, and shadowy dangers. Alan must unravel the truth behind his wife’s disappearance while battling a dark presence that turns ordinary people into nightmarish foes. Will you brave the darkness and uncover the secrets of Bright Falls?</p>
@@ -94,50 +94,87 @@
             }
         </script>
 
-        <div class="title__user-comment">
-            <header>
-                username
-                <span><input type="number" min="1" max="10" class="title__user-comment__rating"> / 10 </span>
-            </header>
-            <form>
-                <textarea></textarea>
-                <button type="submit">
-                    Post
-                </button>
-            </form>
+<div class="title__user-review">
+    <form>
+        <header class="title__user-review__header">
+            <h3>NickFame</h3>
+            <span class="title__user-review__header__rating">
+                <img src="icons/restart.png" onclick="renewRating()">
+                <img src="icons/star.png">
+                <img src="icons/star.png">
+                <img src="icons/star.png">
+                <img src="icons/star.png">
+                <img src="icons/star.png">
+            </span>
+        </header>
+        <div class="title__user-review__comment">
+            <textarea placeholder="Your opinion.."></textarea>
         </div>
+        <button>
+            <img src="icons/send.png">
+        </button>
+    </form>
+</div>
+
+<script src="rating.js">
+</script>
         <header class="title__comments__other-comments">
             <h2>Other comments</h2>
         </header>
         <div class="title__comments">
             <div class="title__comments__comment">
-                <header>
-                    gamerFan
-                    <span>10 / 10</span>
+                <header class="title__comments__comment__header">
+                    <h3>gamerFan</h3>
+                    <span class="title__comments__comment__header__rating">
+                        <img src="icons/star-filled.png">
+                        <img src="icons/star-filled.png">
+                        <img src="icons/star-filled.png">
+                        <img src="icons/star-filled.png">
+                        <img src="icons/star-filled.png">
+                    </span>
                 </header>
                 <p>Alan Wake is a masterpiece of storytelling and atmosphere. The suspense and the eerie vibe of Bright Falls kept me on edge throughout the entire game. Highly recommended for fans of psychological thrillers!</p>
             </div>
             <div class="title__comments__comment">
-                <header>
-                    DarkSeeker
-                    <span>9 / 10</span>
+                <header class="title__comments__comment__header">
+                    <h3>DarkSeeker</h3>
+                    <span class="title__comments__comment__header__rating">
+                        <img src="icons/star-filled.png">
+                        <img src="icons/star-filled.png">
+                        <img src="icons/star-filled.png">
+                        <img src="icons/star-filled.png">
+                        <img src="icons/star.png">
+                    </span>
                 </header>
                 <p>Incredible game with a unique story and haunting soundtrack. The only downside is that the combat can feel repetitive at times, but the narrative more than makes up for it.</p>
             </div>
             <div class="title__comments__comment">
-                <header>
-                    BrightFallsLover
-                    <span>8 / 10</span>
+                <header class="title__comments__comment__header">
+                    <h3>BrightFallsLover</h3>
+                    <span class="title__comments__comment__header__rating">
+                        <img src="icons/star-filled.png">
+                        <img src="icons/star-filled.png">
+                        <img src="icons/star-filled.png">
+                        <img src="icons/star-filled.png">
+                        <img src="icons/star.png">
+                    </span>
                 </header>
                 <p>The atmosphere is amazing, and the story kept me hooked. I just wish there was more variety in the gameplay mechanics. Still, a fantastic experience!</p>
             </div>
             <div class="title__comments__comment">
-                <header>
-                    MysteryHunter
-                    <span>10 / 10</span>
+                <header class="title__comments__comment__header">
+                    <h3>MysteryHunter</h3>
+                    <span class="title__comments__comment__header__rating">
+                        <img src="icons/star-filled.png">
+                        <img src="icons/star-filled.png">
+                        <img src="icons/star-filled.png">
+                        <img src="icons/star-filled.png">
+                        <img src="icons/star-filled.png">
+                    </span>
                 </header>
                 <p>Alan Wake is one of the best psychological thrillers out there. The attention to detail in the storytelling and world-building is phenomenal. A must-play!</p>
             </div>
+            
         </div>
     </main>
 </body>
