--- a/review.html
+++ b/review.html
@@ -106,8 +106,8 @@
             </button>
         </form>
     </div>
-</body>
-<script>
-</script>
 
+<script src="rating.js">
+</script>
+</body>
 </html>
