--- a/john_wick.html
+++ b/john_wick.html
@@ -10,9 +10,9 @@
 
 <body>
     <nav class="nav-primary">
-        <div class="nav-primary__navbar">
+        <div class = "nav-primary__navbar">
             <ul class="nav-primary__links">
-                <li><a href="index.html">FreeTimeZone.cz</a></li>
+                <li id = "logo"><a href="index.html"><img src="icons/FreeTimeZone.png"></a></li>
                 <li><a href="movies.html">Movies</a></li>
                 <li><a href="shows.html">TV shows</a></li>
                 <li><a href="videogames.html">Videogames</a></li>
