--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
         <div class="login">
             <a href = "index.html" class="login__back"><img src="icons/close.png"></a>
             <header><h1>Login</h1></header>
-            <form method="get">
+            <form>
                 <label for="username">Username</label> <input type="text" name="username" id="username"  required>
                 <label for="password">password</label> <input type="password" name="password" id="password" required>
                 <button type="button" onclick="loginControl()" name="login">Login</button>
