--- a/registration.html
+++ b/registration.html
@@ -9,8 +9,8 @@
 <body>
     <main class="main--registration">
     <div class = "registration">
+        <a href = "login.html" class="registration__back"><img src="icons/close.png"></a>
         <header><h1>Registration</h1></header>
-      <!--  <img src="icons/previous.png" onclick = "location.href = 'login.html'" id="login__back">-->
         <form id = "registration">
             <label for="first_name">First Name</label><input type = "text" name = "First_name" id = "first_name">
             <label for="last_name">Last Name</label><input type="text" name = "Last_Name" id="last_name">
