--- a/index.html
+++ b/index.html
@@ -60,6 +60,12 @@
             padding-bottom: auto;
             font-size: 1rem;
         }
+        #logo a img {
+            height: 1rem;
+        }
+        #logo a:hover img {
+            content: url("icons/FreeTimeZone-hover.png");
+        }
         #login{
             color: white;
             text-decoration: none;
@@ -96,7 +102,7 @@
             background-color: white;
         }
         .nav-primary__form_login form button:hover{
-            background-color: silver;
+            background-color: var(--color-element-A);
             cursor: pointer;
             outline: 3px solid black;
         }
@@ -158,7 +164,7 @@
 
         .top-picks__titles img {
             cursor: pointer;
-            height: 300px;
+            height: 250px;
             margin-top: 20px;
             margin-bottom: 20px;
             margin-left: 15px;
@@ -183,8 +189,6 @@
             padding: 7px;
             border-radius: 4px;
             margin: 5px;
-            outline: 3px solid black;
-
         }
 
         .left:hover,
@@ -223,6 +227,7 @@
             padding: 10px;
             aspect-ratio: 16/9;
             max-width: 15rem;
+            min-width: 200px;
             flex-grow: 1;
             padding: 20px;
             border-radius: 15px;
@@ -305,7 +310,7 @@
     <nav class="nav-primary">
         <div class = "nav-primary__navbar">
             <ul class="nav-primary__links">
-                <li><a href="index.html">FreeTimeZone.cz</a></li>
+                <li id = "logo"><a href="index.html"><img src="icons/FreeTimeZone.png"></a></li>
                 <li><a href="movies.html">Movies</a></li>
                 <li><a href="shows.html">TV shows</a></li>
                 <li><a href="videogames.html">Videogames</a></li>
