--- a/news.html
+++ b/news.html
@@ -12,7 +12,7 @@
     <nav class="nav-primary">
         <div class = "nav-primary__navbar">
             <ul class="nav-primary__links">
-                <li><a href="index.html">FreeTimeZone.cz</a></li>
+                <li id = "logo"><a href="index.html"><img src="icons/FreeTimeZone.png"></a></li>
                 <li><a href="movies.html">Movies</a></li>
                 <li><a href="shows.html">TV shows</a></li>
                 <li><a href="videogames.html">Videogames</a></li>
@@ -32,13 +32,13 @@
         <button class="news__aside-opener" onclick="openAside()"><img src="icons/menu.png"></button>
         <aside class="news__aside">
             <div class="news__aside__sort">
-                Sort<br><br>
-                <label>from latest to oldest <input type="radio" name="sort" checked></label><br><br>
-                <label>from oldest to latest <input type="radio" name="sort"></label><br><br>
+                <h2>Sort</h2>
+                <label>from latest to oldest <input type="radio" name="sort" checked></label>
+                <label>from oldest to latest <input type="radio" name="sort"></label>
             </div>
             <form class="news__aside__newsletter">
-                Don't want to miss news from the world of movies, TV series or games?<br> Sign up for our newsletter.<br><br>
-                <label for="email">Email</label><input type="email" id = "email"><br><br>
+                <span>Don´t want to miss news from the world of movies, TV series or games?<br> <span>Sign up</span> for our newsletter.</span>
+                <label>Email<input type="email"></label>
                 <button>Submit</button>
             </form>
         </aside>
