--- a/shows.html
+++ b/shows.html
@@ -12,7 +12,7 @@
     <nav class="nav-primary">
         <div class = "nav-primary__navbar">
             <ul class="nav-primary__links">
-                <li><a href="index.html">FreeTimeZone.cz</a></li>
+                <li id = "logo"><a href="index.html"><img src="icons/FreeTimeZone.png"></a></li>
                 <li><a href="movies.html">Movies</a></li>
                 <li><a href="shows.html">TV shows</a></li>
                 <li><a href="videogames.html">Videogames</a></li>
@@ -33,17 +33,13 @@
         <form>
             <div class="filters__form__rating">
                 <h3>Rating</h3>
-                <div class="doubleRange">
-                    <input type="range" min="1980" max="2024" id="rangeOne">
-                    <input type="range" min="1980" max="2024" id="rangeTwo">
-                </div>
+                <label>From<input type="number" min="0" max="100"></label>
+                <label>To<input type="number" min="0" max="100"></label>
             </div>
             <div class="filters__form__year">
                 <h3>Year</h3>
-                <div class="doubleRange">
-                    <input type="range" min="1980" max="2024" value="2000" id="year"
-                        oninput="this.nextElementSibling.value = this.value"> <output for="year">2000</output>
-                </div>
+                <label>From<input type="number" min="1980" max="2024"></label>
+                <label>To<input type="number" min="1980" max="2024"></label>
             </div>
             <div class="filters__form__platforms">
                 <h3>Platforms</h3>
