--- a/article.html
+++ b/article.html
@@ -64,8 +64,8 @@
             <div class="article__author">
                 <img src="icons/account.png">
                 <div class="article__author__author-information">
-                    Username: Editor<br>
-                    email: editor@gmail.com<br>
+                    Editor<br>
+                    editor@gmail.com<br>
                 </div>
             </div>
         </article>
