--- a/videogames.html
+++ b/videogames.html
@@ -61,8 +61,8 @@
                     <label><input type="checkbox" name="genre" value="sci-fi"> Sci-Fi</label>
                     <label><input type="checkbox" name="genre" value="horror"> Horror</label>
                     <label><input type="checkbox" name="genre" value="thriller"> Thriller</label>
-                    <label><input type="checkbox" name="genre" value="comedy"> Comedy</label>
-                    <label><input type="checkbox" name="genre" value="romance"> Romance</label>
+                    <label><input type="checkbox" name="genre" value="comedy"> RPG</label>
+                    <label><input type="checkbox" name="genre" value="romance"> Adventure</label>
                 </div>
             </div>
         </form>
